# assert-mock

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/assert_mock/: __about__.py  __init__.py
tests/: __init__.py  test_mock.py
